welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lastDigit:2: error: value ==% is not a member of Boolean
  if((a%10==b%10)||(a%10==c%10)||(c%10==b%10)||(a%10==b%10==%10)){
                                                          ^